examples/test/testpolicy14391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14391
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key47: value47
      key10: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value21
          key9: value35
      podSelector:
        matchLabels:
          key22: value23
          key36: value29
          key26: value34
